@@ -61,8 +61,9 @@ ext {
 		disruptor : "3.4.2",
 		jackson : "2.9.5",
 		javaCommons : "[2.0.3,)",
-		javaConcurrent : "[2.0.4,)",
+		javaConcurrent : "[2.0.5,)",
 		javassist : "3.22.0-GA",
+		junit : "4.12",
 		slf4j : "1.7.25",
 		log4j : "2.8.2",
 		metrics : "4.0.2",
@@ -73,7 +74,7 @@ ext {
 
 	leafProjects = subprojects.findAll {
 		it != project("api") && it != project("load") && it != project("storage") &&
-			it != project("storage:driver") && it != project("tests")
+			it != project("storage:driver")
 	}
 }
 
@@ -147,11 +148,6 @@ subprojects {
 					jvmArgs = [
 						//"-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005",
 						"-XX:+HeapDumpOnOutOfMemoryError",
-						"--module-path", classpath.asPath,
-						'--add-exports', "${moduleName}/${moduleName}.test=junit",
-						"--add-modules", "ALL-MODULE-PATH",
-						"--add-reads", "${moduleName}.test=junit",
-						"--patch-module", "${moduleName}=" + files(sourceSets.test.java.outputDir).asPath,
 					]
 				}
 				maxHeapSize "1g"
